--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,7 @@
 	</dependencies>
 
 	<build>
+		<finalName>tinyurl-demo</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
