--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=wc-java-tinyurl-service-docker
 server.port=8080
-spring.profiles.active=docker
+spring.profiles.active=local
 server.servlet.context-path=/tinyurl
 controller1.sub-path=/controller1
 controller2.sub-path=/controller2
