--- a/src/main/resources/application-qa.properties
+++ b/src/main/resources/application-qa.properties
@@ -1,8 +1,8 @@
 # MongoDB (QA)
-spring.data.mongodb.uri=mongodb://root:root@localhost:27018/tiny_url_qa?authSource=admin
+spring.data.mongodb.uri=mongodb://root:root@mongo:27017/tiny_url_qa?authSource=admin
 
 # MySQL (QA)
-spring.datasource.url=jdbc:mysql://localhost:3307/tiny_url_qa
+spring.datasource.url=jdbc:mysql://mysql-older:3306/tiny_url_qa
 spring.datasource.username=root
 spring.datasource.password=root
 
