--- a/mongodb.yaml
+++ b/mongodb.yaml
@@ -2,6 +2,7 @@ version:  "3.8"
 services:
   mongo:
     image:  mongo
+    container_name: mongo-express
     ports:
       - "27018:27017"
     environment:
@@ -16,6 +17,7 @@ services:
 
   mongo-express:
     image:  mongo-express
+    container_name: mongo-express
     ports:
      - "8082:8081"
     environment:
