--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,8 +1,8 @@
 # MongoDB (dev)
-spring.data.mongodb.uri=mongodb://root:root@localhost:27018/tiny_url_dev?authSource=admin
+spring.data.mongodb.uri=mongodb://root:root@mongo:27017/tiny_url_dev?authSource=admin
 
 # MySQL (dev)
-spring.datasource.url=jdbc:mysql://localhost:3307/tiny_url_dev
+spring.datasource.url=jdbc:mysql://mysql-older:3306/tiny_url_dev
 spring.datasource.username=root
 spring.datasource.password=root
 
