--- a/src/main/resources/application-uat.properties
+++ b/src/main/resources/application-uat.properties
@@ -1,8 +1,8 @@
 # MongoDB (UAT)
-spring.data.mongodb.uri=mongodb://root:root@localhost:27018/tiny_url_uat?authSource=admin
+spring.data.mongodb.uri=mongodb://root:root@mongo:27017/tiny_url_uat?authSource=admin
 
 # MySQL (UAT)
-spring.datasource.url=jdbc:mysql://localhost:3307/tiny_url_uat
+spring.datasource.url=jdbc:mysql://mysql-older:3306/tiny_url_uat
 spring.datasource.username=root
 spring.datasource.password=root
 
