--- a/mongodb.yaml
+++ b/mongodb.yaml
@@ -70,6 +70,21 @@ volumes:
     # networks:
     #   - tinyurl-net
 
+  jenkins:
+    image: jenkins/jenkins:lts
+    container_name: jenkins
+    restart: unless-stopped
+    privileged: true
+    user: root
+    ports:
+      - "8080:8080"   # Jenkins UI
+      - "50000:50000" # For Jenkins agents
+    volumes:
+      - ./jenkins_home:/var/jenkins_home
+      - /var/run/docker.sock:/var/run/docker.sock
+    networks:
+      - tinyurl-net  
+
 networks:
   tinyurl-net:
     driver: bridge  
